--- a/public/2Q1GLithiumLorenzo.html
+++ b/public/2Q1GLithiumLorenzo.html
@@ -13,10 +13,16 @@
 </head>
 <body>
     <header>
-        <h1> Welcome to the First Four Nations of Teyvat! </h1>
+        <h1> Welcome to the First Four Nations of Teyvat, Traveler! </h1>
+        <h3> Start your journey through Teyvat by visiting the first four nations that await your arrival. These guides are here to inform you of the nations
+            you will set foot on, its histories, its Archons, and other information that will help in your travelling. Staring with Mondstadt, The City of Freedom,
+            to the harbors of Liyue, then the lonesome island of Inazuma, then to the knowledge-filled nation of Sumeru. Be prepared for the journey
+            that awaits you, dear traveler! </h3>
+            
+        <h1> Current nation you are exploring: Nation of Mondstadt </hi>
+        <h3> Other nations you will be exploring: </h3>
         <nav>
             <ul>
-              <li> <a href="#about"> Nation of Mondstadt </a></li>
               <li> <a href="#about"> Nation of Liyue </a></li>
               <li> <a href="#about"> Nation of Inazuma </a></li>
               <li> <a href="#about"> Nation of Sumeru </a></li>
@@ -24,16 +30,73 @@
         </nav>
        </header>
 
-      <h1> Nation of Mondstadt </hi>
+      <hr />
         <h2> About Mondstadt: </h2>
         <p> Known as the City of Freedom, Mondstadt is located at the northeast of Teyvat. The wind carries the scent of dandelion, the whispers of
-            songs and a gentle tune all from the Anemo Archon, Barbatos, who watches over the children of his nation. Mondstadt is known not only for 
-            it's warm breeze, but is reknowned for it's delicious and tantalizing wine.
+            songs and a gentle tune all from the Anemo Archon, Barbatos, who watches over the children of his nation. Once a mere formless wind spirit,
+            Barbatos gained power from the people of Old Mondstadt during the war against a tyrant king called Decarabian. Soon enough, the wind spirit
+            ascended to godhood and became the Barbatos of the current time. Mondstadt is known not only for it's warm breeze, but is reknowned for it's 
+            delicious and tantalizing wine. Along with traditional and lively festivals such as the Windblume Festival, Ludi Harpastum, and Weinlestfest,
+            Mondstadt truly is a nation of freedom.
         </p>
+
+        <img src="../Assets/Mondstadt.jpg" width="750" height="400"/>
+        <br> <a href="https://youtu.be/_XwlRU2lrPM?si=TJQbfaB9QpfjvWlT"> Look at Mondstadt's scenery here! </a> </br>
         <h2> Mondstadt's Lore: </h2>
-        <p> Mondstadt is protected not only by it's Archon, but by an order of knights called the Knights of Favonius- founded by Vanessa with the help of Barbatos 1000 years 
+        <p> Mondstadt is protected not only by its Archon, but by an order of knights called the Knights of Favonius (K.o.F)- founded by the heroine Vanessa with the help of Barbatos 1000 years 
             ago to prevent the corrupt rule of aristrocats. The head of the knights is Grand Master Varka, who is currently on an expedition along with other knights. Overseeing
-            the knights in his steed is Acting Grand Master Jean, the Dandelion Knight. 
+            the knights in his steed is Acting Grand Master Jean, the Dandelion Knight and the Lion of the South. The Lion of the South is one out of the Four
+            Winds of Mondstadt, four entities entrusted by Barbatos to keep the nation safe a thousand years ago. These entities are Dvalin (Dragon of the East),
+            Boreas (Wolf of the North), Vanessa (the original Lion of the South and Falcon of the West), and Jean (current Lion of the South).
         </p>
+
+        <table border="1"> 
+        <tr>
+           <td> <center> Characters </center> </td>
+           <td> <center> Roles/Factions </center> </td>
+           <td> <center> Vision/Element </center>  </td>
+        </tr>
+        <tr> 
+           <td> Amber </td>
+           <td> Outrider of the K.o.F </td>
+           <td> Pyro/Fire</td>
+        </tr>
+        <tr> 
+           <td> Albedo </td>
+           <td> Chief Alchemist of the K.o.F </td>
+           <td> Geo/Earth </td>
+        </tr>
+        <tr> 
+           <td> Barbara </td>
+           <td> Deaconess of Mondstadt's Church </td>
+           <td> Hydro/Water </td>
+        </tr>
+        <tr> 
+           <td> Diluc </td>
+           <td> Owner of Dawn Winery and Bartender at Angel's Share </td>
+           <td> Pyro/Fire</td>
+        </tr>
+        <tr> 
+           <td> Eula </td>
+           <td> Captain of the Reconnaissance Company of the K.o.F  </td>
+           <td> Cryo/Ice </td>
+        </tr>
+        <tr> 
+           <td> Lisa </td>
+           <td> Librarian of the K.o.F </td>
+           <td> Electro/Lightning </td>
+        </tr>
+        <tr> 
+           <td> Kaeya </td>
+           <td> Cavalry Captain of the K.o.F </td>
+           <td> Cryo/Ice </td>
+        </tr>
+       </table>
+
+
+
+
+
+        
 </body>
 </html>
