--- a/public/2Q1GLithiumLorenzo.html
+++ b/public/2Q1GLithiumLorenzo.html
@@ -31,7 +31,7 @@
        </header>
 
       <hr />
-        <h2> About Mondstadt: </h2>
+        <h2> Mondstadt and It's Archon: </h2>
         <p> Known as the City of Freedom, Mondstadt is located at the northeast of Teyvat. The wind carries the scent of dandelion, the whispers of
             songs and a gentle tune all from the Anemo Archon, Barbatos, who watches over the children of his nation. Once a mere formless wind spirit,
             Barbatos gained power from the people of Old Mondstadt during the war against a tyrant king called Decarabian. Soon enough, the wind spirit
@@ -49,7 +49,8 @@
             Winds of Mondstadt, four entities entrusted by Barbatos to keep the nation safe a thousand years ago. These entities are Dvalin (Dragon of the East),
             Boreas (Wolf of the North), Vanessa (the original Lion of the South and Falcon of the West), and Jean (current Lion of the South).
         </p>
-
+       
+        <h2> The Characters of Mondstadt: </h2>
         <table border="1"> 
         <tr>
            <td> <center> Characters </center> </td>
