--- a/public/2Q1GLithiumLorenzo.html
+++ b/public/2Q1GLithiumLorenzo.html
@@ -31,7 +31,7 @@
        </header>
 
       <hr />
-        <h2> Mondstadt and It's Archon: </h2>
+        <h2> Mondstadt and Its Archon: </h2>
         <p> Known as the City of Freedom, Mondstadt is located at the northeast of Teyvat. The wind carries the scent of dandelion, the whispers of
             songs and a gentle tune all from the Anemo Archon, Barbatos, who watches over the children of his nation. Once a mere formless wind spirit,
             Barbatos gained power from the people of Old Mondstadt during the war against a tyrant king called Decarabian. Soon enough, the wind spirit
@@ -42,12 +42,21 @@
 
         <img src="../Assets/Mondstadt.jpg" width="750" height="400"/>
         <br> <a href="https://youtu.be/_XwlRU2lrPM?si=TJQbfaB9QpfjvWlT"> Look at Mondstadt's scenery here! </a> </br>
-        <h2> Mondstadt's Lore: </h2>
+        <h2> Mondstadt's Lore and History: </h2>
         <p> Mondstadt is protected not only by its Archon, but by an order of knights called the Knights of Favonius (K.o.F)- founded by the heroine Vanessa with the help of Barbatos 1000 years 
             ago to prevent the corrupt rule of aristrocats. The head of the knights is Grand Master Varka, who is currently on an expedition along with other knights. Overseeing
             the knights in his steed is Acting Grand Master Jean, the Dandelion Knight and the Lion of the South. The Lion of the South is one out of the Four
             Winds of Mondstadt, four entities entrusted by Barbatos to keep the nation safe a thousand years ago. These entities are Dvalin (Dragon of the East),
             Boreas (Wolf of the North), Vanessa (the original Lion of the South and Falcon of the West), and Jean (current Lion of the South).
+
+           <br> <br> Long before the current Mondstadt, a tyrant king and the former archon called Decarabian ruled over Old Mondstadt (the Mondstadt before Barbatos's rule). The lands were once cold and harsh,
+            leading to Decarabian creating a powerful vortex that surrounds the old city to protect his people. While this prevents the harsh conditions 
+            from entering and affecting his people, it also meant no one can leave. Along with this, the tyrant king was unaware of his people's contempt against him.
+            Urged by their oppresion, Mondstadt's oppressed yet couragous people alongside Decarabian's own lover, Amos, fought to overturn the tyrant king. In the fight
+            was a wind spirit, who took on the physical human form of a nameless bard who had passed away in the battle. This wind spirit is who we now know as Barbatos, who later ascends
+            to godhood and became the current Anemo Archon. Using his powers, he blew away the snow and ice from the land and established a new Mondstadt. Yet unlike 
+            Decarabian, he chose to fully embrace freedom and left his people to independently govern the nation. After long periods of corrupt aristrocacy (ex. The Lawrence Clan), the 
+            Knights of Favonius was established, alongside other occurences that leads to the present-day Mondstadt.
         </p>
        
         <h2> The Characters of Mondstadt: </h2>
@@ -91,6 +100,11 @@
            <td> Kaeya </td>
            <td> Cavalry Captain of the K.o.F </td>
            <td> Cryo/Ice </td>
+        </tr>
+        <tr> 
+           <td> Venti </td>
+           <td> Mondstadt's Bard and Barbatos in disguise </td>
+           <td> Anemo/Wind </td>
         </tr>
        </table>
 
