--- a/public/2Q1GLithiumLorenzo.html
+++ b/public/2Q1GLithiumLorenzo.html
@@ -26,6 +26,7 @@
               <li> <a href="#about"> Nation of Liyue </a></li>
               <li> <a href="#about"> Nation of Inazuma </a></li>
               <li> <a href="#about"> Nation of Sumeru </a></li>
+              <li> <a href="../index.html"> Back to Portfolio </a> </li>
             </ul>
         </nav>
        </header>
