--- a/public/2Q1GLithiumLorenzo.html
+++ b/public/2Q1GLithiumLorenzo.html
@@ -23,7 +23,7 @@
         <h3> Other nations you will be exploring: </h3>
         <nav>
             <ul>
-              <li> <a href="#about"> Nation of Liyue </a></li>
+              <li> <a href="https://abigail-lorenzana.github.io/2QPortfolioLiLorenzana/public/2Q1GLiLorenzana.html"> Nation of Liyue </a></li>
               <li> <a href="#about"> Nation of Inazuma </a></li>
               <li> <a href="#about"> Nation of Sumeru </a></li>
             </ul>
