--- a/public/2Q1GLithiumLorenzo.html
+++ b/public/2Q1GLithiumLorenzo.html
@@ -40,11 +40,11 @@
     <header>
         <h1> Welcome to the First Four Nations of Teyvat, Traveler! </h1>
         <h3> Start your journey through Teyvat by visiting the first four nations that await your arrival. These guides are here to inform you of the nations
-            you will set foot on, its histories, its Archons, and other information that will help in your travelling. Staring with Mondstadt, The City of Freedom,
-            to the harbors of Liyue, then the lonesome island of Inazuma, then to the knowledge-filled nation of Sumeru. Be prepared for the journey
+            you will set foot on, its histories, its Archons, and other information that will help in your travelling. First venture into Mondstadt, The City of Freedom,
+            before heading to the harbors of Liyue, then the lonesome island of Inazuma, before finally arriving at the knowledge-filled nation of Sumeru. Be prepared for the journey
             that awaits you, dear traveler! </h3>
        <hr />
-        <h1> Current nation you are exploring: Nation of Mondstadt </hi>
+        <h1> Current nation you are exploring: Nation of Mondstadt </h1>
         <h3> Other nations you will be exploring: </h3>
         <nav>
             <ul>
@@ -61,7 +61,7 @@
         <p> Known as the City of Freedom, Mondstadt is located at the northeast of Teyvat. The wind carries the scent of dandelion, the whispers of
             songs and a gentle tune all from the Anemo Archon, Barbatos, who watches over the children of his nation. Once a mere formless wind spirit,
             Barbatos gained power from the people of Old Mondstadt during the war against a tyrant king called Decarabian. Soon enough, the wind spirit
-            ascended to godhood and became the Anemo Archon of current Mondstadt. Mondstadt is known not only for its warm breeze, but is reknowned for its 
+            ascended to godhood and became the Anemo Archon of current Mondstadt. Mondstadt is known not only for its warm breeze, but is renowned for its 
             delicious and tantalizing wine. Along with traditional and lively festivals such as the Windblume Festival, Ludi Harpastum, and Weinlesefest-
             Mondstadt truly is a nation of freedom.
         </p>
@@ -70,7 +70,7 @@
         <br> <a href="https://youtu.be/_XwlRU2lrPM?si=TJQbfaB9QpfjvWlT"> Look at Mondstadt's Scenery and Sentiment here! </a> </br>
         <h2> Mondstadt's Lore and History: </h2>
         <p> Mondstadt is protected not only by its Archon, but by an order of knights called the Knights of Favonius (K.o.F)- founded by the heroine Vanessa with the blessing 
-            of Barbatos with the goal of stopping the corrupt rule of aristcrats during that era. The current head of the knights is Grand Master Varka, who is currently
+            of Barbatos with the goal of stopping the corrupt rule of aristocrats during that era. The current head of the knights is Grand Master Varka, who is currently
             on an expedition along with other knights beyond Mondstadt's walls. Overseeing the knights in his stead is Acting Grand Master Jean, the Dandelion Knight and 
             the Lion of the South. The Lion of the South is one out of the Four Winds of Mondstadt, four entities entrusted by Barbatos to keep the nation safe long ago.
             These entities are Dvalin (Dragon of the East), Boreas (Wolf of the North), Vanessa (Falcon of the West), and Jean (current Lion of the South).
