--- a/public/2Q1GLithiumLorenzo.html
+++ b/public/2Q1GLithiumLorenzo.html
@@ -6,19 +6,18 @@
     <meta name="description" content="2Q Portfolio">
     <meta name="keywords" content="2Q, Portfolio, Projects, Web Development">
     <meta name="author" content="Bernice Lorenzo">
+
     <title> The First Four Nations of Teyvat</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="../Assets/primogem.png" sizes="1000x1000" type="image/png">
     <script src="script.js" defer></script>
 </head>
-    <style> 
-   
+
+    <style>  
    body{
       background-color: rgb(237, 255, 250);
     }
-   
     table{
-      width 50%;
       margin: 50px auto;
       border-collapse: collapse;
     }
@@ -36,6 +35,7 @@
       caption-side: bottom;
    }
     </style>
+
 <body>
     <header>
         <h1> Welcome to the First Four Nations of Teyvat, Traveler! </h1>
@@ -57,6 +57,7 @@
        </header>
 
       <hr />
+      <h1> Mondstadt, the City of Freedom </h1>
         <h2> Mondstadt and Its Archon: </h2>
         <p> Known as the City of Freedom, Mondstadt is located at the northeast of Teyvat. The wind carries the scent of dandelion, the whispers of
             songs and a gentle tune all from the Anemo Archon, Barbatos, who watches over the children of his nation. Once a mere formless wind spirit,
@@ -87,7 +88,6 @@
        
         <h2> The Characters of Mondstadt: </h2>
         <table> 
-         <caption> These are only some of Mondstadt's relevant characters </caption>
         <tr>
            <th> Characters  </th>
            <th>  Roles/Factions  </th>
@@ -95,49 +95,91 @@
         </tr>
         <tr> 
            <td> Amber </td>
-           <td> Outrider of the K.o.F </td>
-           <td> Pyro/Fire</td>
+           <td> Outrider of the K.o.F </td> 
+           <td rowspan="4"> Pyro/Fire</td>
         </tr>
-        <tr> 
-           <td> Albedo/Kreideprinz </td>
-           <td> Chief Alchemist of the K.o.F </td>
-           <td> Geo/Earth </td>
-        </tr>
-        <tr> 
-           <td> Barbara Pegg </td>
-           <td> Deaconess of Mondstadt's Church </td>
-           <td> Hydro/Water </td>
+         <tr> 
+           <td> Bennett </td>
+           <td> Adventurer from the Adventurers Guild </td>
         </tr>
         <tr> 
            <td> Diluc Ragnvindr </td>
-           <td> Owner of Dawn Winery, Bartender at Angel's Share, Dark Knight </td>
-           <td> Pyro/Fire</td>
+           <td> Owner of Dawn Winery, Bartender of Angel's Share, Dark Knight </td>
+        </tr>
+        <tr>
+           <td> Klee </td>
+           <td> Spark Knight of the K.o.F, Daughter of Alice </td>
         </tr>
         <tr> 
            <td> Eula Lawrence </td>
-           <td> Captain of the Reconnaissance Company of the K.o.F  </td>
-           <td> Cryo/Ice </td>
+           <td> Captain of the Reconnaissance Company of the K.o.F </td> 
+           <td rowspan ="5"> Cryo/Ice </td>
         </tr>
         <tr> 
-           <td> Jean Gunnhildr </td>
-           <td> Acting Grand Master of the K.o.F, Lion of the South </td>
-           <td> Anemo/Wind </td>
-        </tr>
-        <tr> 
-           <td> Lisa Minci </td>
-           <td> Head Librarian of the K.o.F, Alumna of Sumeru Akademiya</td>
-           <td> Electro/Lightning </td>
+           <td> Diona Kätzlein </td>
+           <td> Bartender of Cat's Tail </td>
         </tr>
         <tr> 
            <td> Kaeya Alberich </td>
            <td> Cavalry Captain of the K.o.F </td>
-           <td> Cryo/Ice </td>
+        </tr>
+        <tr> 
+           <td> Mika Schmidt </td>
+           <td> Front-line Surveyor of the Reconnaissance Company of the K.o.F </td>
+        </tr>
+        <tr> 
+           <td> Rosaria </td>
+           <td> Nun of the Church of Favonius </td>
+        </tr>
+        <tr> 
+           <td> Jean Gunnhildr </td>
+           <td> Acting Grand Master of the K.o.F, Lion of the South </td>
+           <td rowspan="3"> Anemo/Wind </td>
+        </tr>
+        <tr> 
+           <td> Sucrose </td>
+           <td> Alchemist who specialized in bio-alchemy, Albedo's assistant </td>
         </tr>
         <tr> 
            <td> Venti </td>
            <td> Mondstadt's Bard and Barbatos in disguise </td>
-           <td> Anemo/Wind </td>
         </tr>
+        <tr> 
+           <td> Albedo/Kreideprinz </td>
+           <td> Chief Alchemist of the K.o.F </td>
+           <td rowspan="2"> Geo/Earth </td>
+        </tr>
+        <tr> 
+           <td> Noelle </td>
+           <td> Maid of the K.o.F </td>
+        </tr>
+        <tr> 
+           <td> Barbara Pegg </td>
+           <td> Deaconess of the Church of Favonius </td>
+           <td rowspan="3"> Hydro/Water </td>
+        </tr>  
+        <tr> 
+           <td> Dahlia </td>
+           <td> Deacon of the Church of Favonius, Herald of Barbatos </td>
+        </tr>
+        <tr> 
+           <td> Mona Megistus </td>
+           <td> Astrologist </td>
+        </tr>
+        <tr> 
+           <td> Fischl von Luftschloss Narfidort/Amy </td>
+           <td> Investigator of the Adventurers' Guild </td>
+           <td rowspan="3"> Electro/Lightning </td>
+        </tr>
+        <tr> 
+           <td> Lisa Minci </td>
+           <td> Head Librarian of the K.o.F, Alumna of Sumeru Akademiya</td>
+        </tr>
+        <tr> 
+           <td> Razor </td>
+           <td> An orphaned boy raised by wolves in Wolvendom </td>
+        </tr>
+        
        </table>
 
        <footer>
