--- a/public/2Q1GLithiumLorenzo.html
+++ b/public/2Q1GLithiumLorenzo.html
@@ -188,7 +188,7 @@
        <p> Adria. (2025, August 23). Fantasy Landscape. Pinterest. <a href="https://ph.pinterest.com/pin/365143482310992458/"> https://ph.pinterest.com/pin/365143482310992458/ </a> </p>
        <p> Genshin Impact. (2022, October 21). Scenery and Sentiment: Mondstadt Edition | Genshin Impact [Video]. YouTube. <a href="https://www.youtube.com/watch?v=_XwlRU2lrPM"> https://www.youtube.com/watch?v=_XwlRU2lrPM </a> </p>
        <p> Wiki, C. T. G. I. (n.d.). Mondstadt/History. Genshin Impact Wiki. <a href="https://genshin-impact.fandom.com/wiki/Mondstadt/History"> https://genshin-impact.fandom.com/wiki/Mondstadt/History </a></p>
-       <p> Copyright <span>&copy; Bernice Lorenzo </span></p>
+       <hr /> <p> Copyright <span>&copy; Bernice Lorenzo </span></p>
        </footer>
 
      
