--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <nav>
       <ul>
         <li> <a href="./public/2Q1GLithiumLorenzo.html"> First Graded </a></li>
+         <li> <a href="./public/Q21NGLithiumLorenzo.html"> First Non-Graded </a></li>
         <li> <a href="#">Second Graded </a></li>
         <li> <a href="#"> Third Graded </a></li>
         <li> <a href="#"> Access to our Project </a></li>
