--- a/public/Q21NGLithiumLorenzo.html
+++ b/public/Q21NGLithiumLorenzo.html
@@ -54,6 +54,7 @@
         <hr />
         <h3> References: </h3> 
         <li> W3Schools.com. (n.d.). <a href="https://www.w3schools.com/css/css_selectors.asp"> https://www.w3schools.com/css/css_selectors.asp </a> </li>
+        <hr /> <li> Copyright <span>&copy; Bernice Lorenzo </span></li>
     </footer>
 </body>
 </html>
