--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <ul>
         <li> <a href="./public/2Q1GLithiumLorenzo.html"> First Graded </a></li>
          <li> <a href="./public/Q21NGLithiumLorenzo.html"> First Non-Graded </a></li>
-        <li> <a href="#">Second Graded </a></li>
+        <li> <a href="./public/2Q2GLithiumLorenzo.html">Second Graded </a></li>
         <li> <a href="#"> Third Graded </a></li>
         <li> <a href="#"> Access to our Project </a></li>
       </ul>
