--- a/public/2Q1GLithiumLorenzo.html
+++ b/public/2Q1GLithiumLorenzo.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Bernice Lorenzo">
 
     <title> The First Four Nations of Teyvat</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="blank.css">
     <link rel="icon" href="../Assets/primogem.png" sizes="1000x1000" type="image/png">
     <script src="script.js" defer></script>
 </head>
