--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <style>
   
     body{
-      background-image: url(../Assets/flowers.jpg);
+      background-image: url(./Assets/flowers.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
