--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="2Q, Portfolio, Projects, Web Development">
     <meta name="author" content="Bernice Lorenzo">
 
-    <title> 2Q Portfolio</title>
+    <title> 4Q Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./Assets/Kaeya 2.0.png" sizes="1000x1000" type="image/png">
     <script src="script.js" defer></script>
@@ -60,7 +60,7 @@
 </style>
 
 <header> 
-  <h1> My Portfolio of my work in the 2nd Qtr </h1>
+  <h1> My Portfolio of my work in the 3rd - 4th Qtr </h1>
 </header>
 
 <body>
