--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
    <a href="./public/Q21NGLithiumLorenzo.html"> <button> 2Q First Non-Graded </button> </a>
    <a href="./public/2Q2GLithiumLorenzo.html"> <button> 2Q Second Graded </button> </a>
    <a href="./public/3Q4NGLithiumLorenzo.html"> <button> 3Q 4th Non-Graded </button> </a>
+   <a href="./public/Q3_2GLithiumLorenzo.html"> <button> 3Q Second Graded </button> </a>
+
 
    
    <footer>
