--- a/public/Q3_2GLithiumLorenzo.html
+++ b/public/Q3_2GLithiumLorenzo.html
@@ -11,28 +11,30 @@
         <legend> Student Info </legend>
         <label for="student id"> Student ID: </label>
         <input type="number" id="studentID" name="studentID" placeholder="00-0000-000" required>
-        <br>
+        <br> <br>
 
         <label for="full name"> Full Name </label>
         <input type="text" id="full name" name="full name" placeholder="LASTNAME, Firstname MI." required>
-        <br>
+        <br> <br>
 
         <label for="birthday"> Birthday </label>
         <input type="date" id="birthday" name="birthday">
-        <br>
+        <br> <br>
 
         <label for="email"> Email Address: </label>
         <input type="email" id="email" name="email" placeholder="youremail@email.com" required>
         <br> 
       </fieldset>
 
+      <br> 
+
       <fieldset>
         <legend> Extra Info </legend>
         <label for="phone"> Mobile Phone: </label>
         <input type="text" id="phone" name="phone" placeholder="00000000000" required>
-        <br>
+        <br> <br>
 
-        <label for="grlvl"> Grade Level </label>
+        <label for="grlvl"> Grade Level: </label>
         <select name="grave level" id="grlvl" required>
             <option value="gr7"> Grade 7 </option>
             <option value="gr8"> Grade 8 </option>
@@ -48,7 +50,7 @@
        <input type="radio" id="extern" name="status" value="Extern" required>
        <label for="extern"> Extern </label>
 
-    <br>
+    <br> <br>
 
        <label for="club"> Preferred Organization/Club</label>
         <select name="club" id="org" required>
@@ -62,10 +64,10 @@
             <option value="atom"> Atom </option>
         </select>
 
-        <br>
+        <br> <br>
         <label for="reason"> Why do you want to join? </label>
         <textarea id="tArea" name="reason"> </textarea>
-        <br>
+        <br> <br>
         
        <input type = "submit" value = "Submit form">
        <input type = "reset" value = "Reset">
